--- a/vpn/ipsec.conf
+++ b/vpn/ipsec.conf
@@ -1,1 +1,26 @@
+# /etc/ipsec.conf - Libreswan IPsec configuration file
+#
+# Manual:     ipsec.conf.5
 
+config setup
+        protostack=netkey
+        #protostack=auto
+        virtual_private=%v4:192.168.0.0/24
+        #oe=off
+        #nat_traversal=yes
+        plutostderrlog=~/var/log/swan.log
+        interfaces="ipsec0=eth0"
+conn bizotdc2azurevpnc
+        authby=secret
+        auto=start
+        type=tunnel
+        left=192.168.0.119
+        #leftsourceip=192.168.0.119
+        leftsubnet=192.168.0.0/24
+        leftnexthop=%defaultroute
+        right=40.89.130.146
+        rightsubnet=10.0.0.0/24
+        ike=3des-sha1-modp1024,aes128-sha1-modp1024
+        ikev2=yes
+        esp=3des-sha1,aes128-sha1
+        pfs=no
