--- a/vpn/ipsec.conf
+++ b/vpn/ipsec.conf
@@ -5,11 +5,13 @@
 config setup
         protostack=netkey
         #protostack=auto
-        virtual_private=%v4:192.168.0.0/24
+        #virtual_private=%v4:192.168.0.0/24
         #oe=off
         #nat_traversal=yes
         plutostderrlog=~/var/log/swan.log
         interfaces="ipsec0=eth0"
+        virtual_private=%v4:10.0.0.0/8,%v4:192.168.0.0/24,%v4:172.16.0.0/12,%v4:25.0.0.0/8,%v4:100.64.0.0/10,%v6:fd00::/8,%v6:fe80::/10
+
 conn bizotdc2azurevpnc
         authby=secret
         auto=start
