Adding multiple subnets

--- a/vpn/ipsec.conf
+++ b/vpn/ipsec.conf
@@ -5,24 +5,27 @@
 config setup
         protostack=netkey
         #protostack=auto
-        #virtual_private=%v4:192.168.0.0/24
+        virtual_private=%v4:192.168.0.0/24
         #oe=off
         #nat_traversal=yes
         plutostderrlog=~/var/log/swan.log
         interfaces="ipsec0=eth0"
-        virtual_private=%v4:10.0.0.0/8,%v4:192.168.0.0/24,%v4:172.16.0.0/12,%v4:25.0.0.0/8,%v4:100.64.0.0/10,%v6:fd00::/8,%v6:fe80::/10
 
 conn bizotdc2azurevpnc
-        authby=secret
-        auto=start
-        type=tunnel
-        left=192.168.0.119
-        #leftsourceip=192.168.0.119
-        leftsubnet=192.168.0.0/24
-        leftnexthop=%defaultroute
-        right=40.89.130.146
-        rightsubnet=10.0.0.0/24
-        ike=3des-sha1-modp1024,aes128-sha1-modp1024
-        ikev2=yes
-        esp=3des-sha1,aes128-sha1
-        pfs=no
+    authby=secret
+    auto=start
+    type=tunnel
+    left=192.168.0.119
+    #leftsourceip=192.168.0.119
+    #leftsubnet=192.168.0.0/24
+    leftsubnets=192.168.0.0/24,172.30.0.0/16,172.17.0.0/16,10.128.0.0/14
+    leftnexthop=%defaultroute
+    right=40.89.130.146
+    #rightsubnet=10.0.0.0/24
+    rightsubnets=10.0.0.0/24,172.30.0.0/16,172.17.0.0/16,10.128.0.0/14
+    ike=3des-sha1-modp1024,aes128-sha1-modp1024
+    ikev2=yes
+    esp=3des-sha1,aes128-sha1
+    pfs=no
+
+#include /etc/ipsec.d/*.conf
